<resources>
    <string name="app_name">ECG Reader</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="Camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="detale_report">Detail report</string>
    <string name="report">Report</string>
    <string name="change_image">Change Image</string>
    <string name="demo_text">[12] , [13] a Pindari word wiki (a kind of combined website name, \"walking\" in Hawaiian ) [14] and World Cell . \'Wiki Wiki\' means standing and walking on small legs. Everyone\'s small contributions to the wiki web culture add to the growing collection like this site. Currently it is used as the largest and most popular internet based reference. [7] [7] [8] [9] [15]  006, Time Magazine recognizes that Wikipedia ( YouTube , redita , MySpace , and Facebook alongside [16] ), the global online collaboration and interaction with the participation of millions of people is increasing rapidly. It has also gained a reputation as a news source due to its quick updates on Wikipedia articles. [18] [18] [19]  Due to the open nature of the Wikipedia website, various initiatives are taken to protect the quality of writing, [20] vulnerability and accuracy of information. [21] [22] [22] However, some articles may contain untested or unverified or inconsistent information. [23]  Chapters History Main article: History of Wikipedia     Jimmy Wells and Larry Sanger   Wikipedia was originally based on another encyclopedia called Nupedia Wikipedia was started as an extension of Nupedia . Nupedia is a free encyclopedia in English where experts write and edit according to a specific method. A web portal called Bomis, Inc. launched Nupedia on March 9, 2000. The main characters here were Jimmy Wells, executive director of Bomic, and Larry Sanger, editor-in-chief, who later became involved in Wikipedia\'s activities. Nupedia was operating under the free information license; However, after Richard Stallman joined the Wikipedia program, the GNU Free Documentation License was changed. [24]    External audio   গ্রেট বুক অব নলেজ, অংশ ১, পল কেনেডি, সিবিসি-এর ধারণানুসারে, জানুয়ারি ১৫. ২০১৪। Larry Sanger and Jimmy Wells are the founders of Wikipedia. [25] [26] Jimmy Wells set the goals for creating an encyclopedia that everyone could edit, [27] [26] and Larry Sanger was credited with setting a successful editing strategy through the Wiki project . [29] On January 10, 2001, Jimmy Wells proposed creating a wiki as a co-project of Nupedia in Nupedia\'s mailing list. [30] www.wikipedia.com was officially launched in English only on January 15, 2001, [31] and Sanger announced it on Nupedia\'s mailing list. [26]Shortly after Wikipedia started working, the \"neutral approach\" rule was introduced, which is very similar to Nupedia\'s \"avoidance of bias\" rule. In addition, some more policies and guidelines were initially developed to manage this encyclopedia properly, and Wikipedia began to function as a separate entity from Nupedia. [26]    The chart shows an increase in the number of articles in the English Wikipedia, from January 10, 2001 to September 9, 2007 (the day when the number of articles in the English wiki exceeded 2 million). Wikipedia\'s first articles were created using Nupedia, Slashdot Posting, and Search Engine Indexing. By 2001, Wikipedia had about 20,000 articles in 18 languages. By the end of 2003, work began in 26 languages, and by 2003, Wikipedia had been launched in 48 languages. The Wikipedia project in 181 languages ​​was launched before the end of 2004. [32] Nupedia and Wikipedia were separate until a server problem in 2003, and since then all articles have been integrated with Wikipedia. On September 9, 2006, the English Wikipedia surpassed 2 million articles. It then became the largest encyclopedia in the world, fading the Yongle Encyclopedia, created in 1406. Yongle Encyclopedia has been the richest encyclopedia in the world for the last 600 years . [33]</string>
    <string name="save">Save</string>
    <string name="is_login">Login</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notification</string>
    <string name="change_pass">Change pass</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="sharapp">Shareapp</string>
    <string name="privacy_policy">Privacy</string>
    <string name="logout">logout</string>
    <string name="rate">Rate</string>
    <string name="terms_conditions">Terms and Condition</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="changepswtext">Change password</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="reset_pass_text">Reset password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="reset_pass">Reset</string>
    <string name="forgottext">Forget password</string>
    <string name="recover_pass">Recover password</string>
    <string name="verify_message">Enter code</string>
    <string name="resend">Resend</string>
    <string name="login_">Login</string>
    <string name="mobile">modile</string>
    <string name="password_">Password</string>
    <string name="not_registered">Not registered ?</string>
    <string name="verify_your_mobile">Varify mobile</string>
    <string name="personal_info">"Personal information "</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="select_city">Select city</string>
    <string name="select_area">"select area "</string>
    <string name="password">Password</string>
    <string name="msg_privacy_terms"><![CDATA["Tearms & Condition "]]></string>
    <string name="submit">Submit</string>
    <string name="pincode">Pincode</string>
    <string name="address">Address</string>
    <string name="Emali">Email</string>
    <string name="user_name">Name</string>
    <string name="exit_msg">Click again to exit</string>
    <string name="patient_info">Patient Information</string>
</resources>