<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/home_bottom2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"

        android:outlineAmbientShadowColor="@color/red_700"
        android:outlineSpotShadowColor="@color/red_700"
        >
        <Button
            android:id="@+id/camera_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Camera"
            android:textSize="16sp"
            android:onClick="OnClickBtn"
            android:visibility="gone"
             />
        <Button
            android:id="@+id/gallery_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/gallery"
            android:textSize="16sp"
            android:onClick="OnClickBtn"
            />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:onClick="OnClickBtn"
            />
    </LinearLayout>
</RelativeLayout>