<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_500"
    android:focusableInTouchMode="true">
    <include layout="@layout/toolbar_layout" />


    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/login_logo"
        android:scaleType="fitXY"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytbottom"
        android:layout_below="@+id/imglogo"
        android:layout_marginTop="30dp"
        android:background="#F5F5F5" />

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytbottom"
        android:layout_below="@+id/imglogo">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytbottom"
        android:layout_below="@+id/imglogo"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/card_shadow">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <!--Change Password lyt-->


                <!--Reset Password lyt-->


                <!--Forgot Password lyt-->
                <LinearLayout
                    android:id="@+id/lytforgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/fpassHad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="75dp"
                        android:text="@string/forgottext"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:visibility="visible"/>

                    <TextView
                        android:id="@+id/rePassMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="75dp"
                        android:text="@string/forgottext"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:visibility="gone"/>

                        <EditText
                            android:id="@+id/edtFCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:gravity="center_horizontal"
                            android:hint="Enter yout registered email"
                            android:inputType="textEmailAddress"
                            android:minWidth="50dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                    <Button
                        android:id="@+id/btnrecover"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:onClick="OnBtnClick"
                        android:text="@string/recover_pass"
                        android:textColor="@color/white" />



                </LinearLayout>


                <!--Login lyt-->

                <LinearLayout
                    android:id="@+id/lytLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/login_"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black" />
                    <EditText
                        android:id="@+id/loginId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_margin="10dp"
                        android:hint="Email"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        />
                    <EditText
                        android:id="@+id/loginPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_margin="10dp"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        />
                    <TextView
                        android:id="@+id/tvForgotPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:onClick="OnBtnClick"
                        android:padding="5dp"
                        android:text="@string/forgottext"
                        android:textColor="@color/black" />
                    <Button
                        android:id="@+id/btnLogin"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="10dp"
                        android:onClick="OnBtnClick"
                        android:text="@string/login_"
                        android:textColor="@color/white" />
                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:onClick="OnBtnClick"
                        android:padding="5dp"
                        android:text="@string/not_registered"
                        android:textColor="@color/red_500" />
                </LinearLayout>

                <!--Verify lyt-->



                <!--SignUp lyt-->

                <LinearLayout
                    android:id="@+id/signUpLyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/regProfileImage"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_below="@+id/toolbar"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="30dp"
                        android:src="@drawable/add_user"
                        android:layout_marginTop="30dp"
                        android:onClick="OnBtnClick"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/personal_info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:layout_marginBottom="20dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        >

                        <EditText
                            android:id="@+id/edtName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:lines="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        >

                        <EditText
                            android:id="@+id/edtMail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:textColor="@color/black"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password">

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_pass">

                        <EditText
                            android:id="@+id/edtConPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <!--<LinearLayout
                        android:id="@+id/lytPrivacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/chPrivacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tvPrivacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="OnBtnClick"
                            android:padding="5dp"
                            android:text="@string/msg_privacy_terms"
                            android:textColor="@color/black" />
                    </LinearLayout>-->

                    <Button
                        android:id="@+id/btnSubmit"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="@dimen/margin_10dp"

                        android:onClick="OnBtnClick"
                        android:text="@string/submit"
                        android:textColor="@color/white" />
                    <TextView
                        android:id="@+id/tvGoToLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:onClick="OnBtnClick"
                        android:padding="5dp"
                        android:text="Already have an account? Back to login."
                        android:textColor="@color/red_500" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <!--</ScrollView>-->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>

